--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello coursera!</title>
+    <title>Tu tienda maps</title>
+
 </head>
 <body>
-    <h1>hello coursera! It's a great course</h1>    
+    
+    <h1></h1>    
 </body>
 </html>
